# y-simplex-method-solver

./: README.md
y-simplex-method-solver-app/: .gitignore  main.py  requirements.txt
y-simplex-method-solver-app/Applications/: SimplexSolverApp.py  __init__.py
y-simplex-method-solver-app/Controller/: IOParser.py  SaveLoadController.py  SettingsController.py  SimplexBackendController.py  ToDocumentConverter.py  ToHTMLConverter.py  ToPDFConverter.py  ToWordConverter.py  __init__.py
y-simplex-method-solver-app/Model/: FullSolutionStruct.py  InputStruct.py  ProblemType.py  ResultStruct.py  Settings.py  SettingsCategory.py  SimplexFile.py  __init__.py
y-simplex-method-solver-app/View/: Constraint.py  Function.py  InputBox.py  MainWindow.py  MenuBar.py  NumberLineEdit.py  OutputBox.py  VariableInputView.py  VariableOutputView.py  VariableView.py  __init__.py
y-simplex-method-solver-app/View/CustomWidgets/: FlexBox.py  __init__.py
y-simplex-method-solver-app/View/DirectoryView/: DirectoryViewWidget.py  WorkingDirectoryView.py  __init__.py
y-simplex-method-solver-app/View/HelpView/: ContactView.py  InstructionView.py  __init__.py
y-simplex-method-solver-app/View/InputView/: Constraint.py  Function.py  InputBox.py  NumberLineEdit.py  ObjectiveFunction.py  VariableInputView.py  __init__.py
y-simplex-method-solver-app/View/MainView/: FileTabBar.py  FileView.py  MainWindow.py  MenuBar.py  __init__.py
y-simplex-method-solver-app/View/OutputView/: BoundingRegion2D.py  GraphOutputView.py  GraphOutputView2D.py  Line2D.py  OperationText.py  OutputBox.py  SolutionView.py  StepTable.py  TableOutputView.py  VariableOutputView.py  WorkingOutView.py  __init__.py
y-simplex-method-solver-app/View/SettingsView/: EditorSettings.py  ExportSettings.py  GeneralSettings.py  PerformanceSettings.py  SaveDirectoryField.py  SaveFileNameField.py  SettingsDialogue.py  SettingsMenu.py  __init__.py
y-simplex-method-solver-library/: .gitignore  CMakeLists.txt  CMakePresets.json  y-simplex-method-solver.cpp  y-simplex-method-solver.hpp
y-simplex-method-solver-library/Headers/: ProblemType.inl  Simplex.hpp
y-simplex-method-solver-library/Source/: Simplex.cpp
y-simplex-method-solver-library/Tests/: SimplexTest.cpp
